Revert "fix: "full canvas" mobile menu overlapping with WC product tabs issue has been fixed"
This reverts commit 451c1dd58a19382ed9fddec91cbf2f277d34aec0.

--- a/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
+++ b/assets/scss/components/hfg/frontend/layout/_mobile_sidebar.scss
@@ -6,7 +6,8 @@
 	max-width: 100%;
 	top: 0;
 	z-index: $menu_sidebar_active_z_index;
-	display: none;
+	visibility: hidden;
+	display: flex;
 	transition: all 0.3s cubic-bezier(0.79, 0.14, 0.15, 0.86);
 	height: 100vh;
 
@@ -142,7 +143,7 @@
 .is-menu-sidebar {
 
 	.header-menu-sidebar {
-		display: flex;
+		visibility: visible;
 	}
 
 	&.menu_sidebar_slide_left {
